update dockerfile to use my build